--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,6 @@ dependencies {
     // Integration with observables
     implementation 'androidx.compose.runtime:runtime-livedata:1.1.1'
 //    implementation 'androidx.compose.runtime:runtime-rxjava2:1.1.1'
+    implementation "androidx.navigation:navigation-compose:2.4.2"
+    implementation "com.github.doctor-blue:compose-navigation:1.1.0"
 }
