--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.devcomentry.composeexample"
+        applicationId "com.devcomentry.plants"
         minSdk 21
         targetSdk 32
         versionCode 1
